[package]
name = "meta-link-connector-batch-lvc"
version = "0.1.0"
edition = "2021"
description = "Distributed system for real-time data processing"
license = "MIT"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
